[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/resources/menu_environment.tres" type="Environment" id=1]
[ext_resource path="res://home/Home.gd" type="Script" id=2]
[ext_resource path="res://assets/tiles/tile_title.png" type="Texture" id=3]
[ext_resource path="res://assets/theme/lerimama_theme.tres" type="Theme" id=4]
[ext_resource path="res://assets/32_pixel_colors.png" type="Texture" id=5]

[sub_resource type="ConvexPolygonShape2D" id=136]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="TileSet" id=135]
0/name = "tile_title.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 136 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 136 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="Animation" id=132]
resource_name = "main_out"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_load_game"
} ]
}

[node name="Home" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 544.0, 640.0 ]
}

[node name="Undi" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1280, 720 )
color = Color( 0, 0, 0, 1 )

[node name="32PixelColors" type="Sprite" parent="."]
position = Vector2( 544, 872 )
rotation = 3.14159
scale = Vector2( 1, -1 )
texture = ExtResource( 5 )

[node name="img" type="Node2D" parent="."]
visible = false
position = Vector2( 544, 464 )
rotation = 3.14159
scale = Vector2( 1, -1 )

[node name="strejs" type="Node2D" parent="img"]
position = Vector2( 0, 80 )

[node name="PolyPixel" type="Polygon2D" parent="img/strejs"]
position = Vector2( 384, 96 )
color = Color( 0.52549, 0.482353, 0.933333, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel2" type="Polygon2D" parent="img/strejs"]
position = Vector2( 512, -96 )
color = Color( 0.815686, 0.458824, 0.627451, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel3" type="Polygon2D" parent="img/strejs"]
position = Vector2( 480, 32 )
color = Color( 0.996078, 0.866667, 0.478431, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel4" type="Polygon2D" parent="img/strejs"]
position = Vector2( -96, 192 )
color = Color( 0.341176, 0.65098, 1, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel5" type="Polygon2D" parent="img/strejs"]
position = Vector2( 352, 0 )
color = Color( 0.490196, 1, 0.52549, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel8" type="Polygon2D" parent="img/strejs"]
position = Vector2( 128, -64 )
color = Color( 0.741176, 0.996078, 0.466667, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel10" type="Polygon2D" parent="img/strejs"]
position = Vector2( 416, -160 )
color = Color( 0.341176, 0.65098, 1, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 12.8702, 32, 32, 0, 32 )

[node name="PolyPixel11" type="Polygon2D" parent="img/strejs"]
position = Vector2( 64, 64 )
color = Color( 0.47451, 0.580392, 0.984314, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel12" type="Polygon2D" parent="img/strejs"]
position = Vector2( 384, 256 )
color = Color( 0.368627, 1, 0.662745, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel6" type="Polygon2D" parent="img/strejs"]
position = Vector2( 256, -224 )
color = Color( 0.647059, 0.47451, 0.772549, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel7" type="Polygon2D" parent="img/strejs"]
position = Vector2( -32, 0 )
color = Color( 0.494118, 0.996078, 0.752941, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel13" type="Polygon2D" parent="img/strejs"]
position = Vector2( 576, 128 )
color = Color( 0.341176, 0.65098, 1, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel14" type="Polygon2D" parent="img/strejs"]
position = Vector2( 320, -128 )
color = Color( 0.490196, 0.858824, 0.988235, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel15" type="Polygon2D" parent="img/strejs"]
position = Vector2( 256, 64 )
color = Color( 1, 0.6, 0.521569, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="strejs2" type="Node2D" parent="img"]
modulate = Color( 1, 1, 1, 0.235294 )
position = Vector2( -32, 80 )

[node name="PolyPixel" type="Polygon2D" parent="img/strejs2"]
position = Vector2( 384, 96 )
color = Color( 0.52549, 0.482353, 0.933333, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel2" type="Polygon2D" parent="img/strejs2"]
position = Vector2( 512, -96 )
color = Color( 0.815686, 0.458824, 0.627451, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel3" type="Polygon2D" parent="img/strejs2"]
position = Vector2( 480, 32 )
color = Color( 0.996078, 0.866667, 0.478431, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel4" type="Polygon2D" parent="img/strejs2"]
position = Vector2( -96, 192 )
color = Color( 0.341176, 0.65098, 1, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel5" type="Polygon2D" parent="img/strejs2"]
position = Vector2( 352, 0 )
color = Color( 0.490196, 1, 0.52549, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel8" type="Polygon2D" parent="img/strejs2"]
position = Vector2( 128, -64 )
color = Color( 0.741176, 0.996078, 0.466667, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel10" type="Polygon2D" parent="img/strejs2"]
position = Vector2( 416, -160 )
color = Color( 0.341176, 0.65098, 1, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 12.8702, 32, 32, 0, 32 )

[node name="PolyPixel11" type="Polygon2D" parent="img/strejs2"]
position = Vector2( 96, 96 )
color = Color( 0.47451, 0.580392, 0.984314, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel12" type="Polygon2D" parent="img/strejs2"]
position = Vector2( 448, 256 )
color = Color( 0.368627, 1, 0.662745, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel6" type="Polygon2D" parent="img/strejs2"]
position = Vector2( 288, -192 )
color = Color( 0.647059, 0.47451, 0.772549, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel7" type="Polygon2D" parent="img/strejs2"]
position = Vector2( -32, 0 )
color = Color( 0.494118, 0.996078, 0.752941, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel13" type="Polygon2D" parent="img/strejs2"]
position = Vector2( 608, 160 )
color = Color( 0.341176, 0.65098, 1, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel14" type="Polygon2D" parent="img/strejs2"]
position = Vector2( 352, -96 )
color = Color( 0.490196, 0.858824, 0.988235, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel15" type="Polygon2D" parent="img/strejs2"]
position = Vector2( 256, 64 )
color = Color( 1, 0.6, 0.521569, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="strejs3" type="Node2D" parent="img"]
modulate = Color( 1, 1, 1, 0.0784314 )
position = Vector2( -64, 80 )

[node name="PolyPixel" type="Polygon2D" parent="img/strejs3"]
position = Vector2( 384, 96 )
color = Color( 0.52549, 0.482353, 0.933333, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel2" type="Polygon2D" parent="img/strejs3"]
position = Vector2( 512, -96 )
color = Color( 0.815686, 0.458824, 0.627451, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel3" type="Polygon2D" parent="img/strejs3"]
position = Vector2( 480, 32 )
color = Color( 0.996078, 0.866667, 0.478431, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel4" type="Polygon2D" parent="img/strejs3"]
position = Vector2( -96, 192 )
color = Color( 0.341176, 0.65098, 1, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel5" type="Polygon2D" parent="img/strejs3"]
position = Vector2( 352, 0 )
color = Color( 0.490196, 1, 0.52549, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel8" type="Polygon2D" parent="img/strejs3"]
position = Vector2( 128, -64 )
color = Color( 0.741176, 0.996078, 0.466667, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel10" type="Polygon2D" parent="img/strejs3"]
position = Vector2( 416, -160 )
color = Color( 0.341176, 0.65098, 1, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 12.8702, 32, 32, 0, 32 )

[node name="PolyPixel11" type="Polygon2D" parent="img/strejs3"]
position = Vector2( 128, 128 )
color = Color( 0.47451, 0.580392, 0.984314, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel12" type="Polygon2D" parent="img/strejs3"]
position = Vector2( 512, 256 )
color = Color( 0.368627, 1, 0.662745, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel6" type="Polygon2D" parent="img/strejs3"]
position = Vector2( 320, -160 )
color = Color( 0.647059, 0.47451, 0.772549, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel7" type="Polygon2D" parent="img/strejs3"]
position = Vector2( -32, 0 )
color = Color( 0.494118, 0.996078, 0.752941, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel13" type="Polygon2D" parent="img/strejs3"]
position = Vector2( 640, 192 )
color = Color( 0.341176, 0.65098, 1, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel14" type="Polygon2D" parent="img/strejs3"]
position = Vector2( 384, -64 )
color = Color( 0.490196, 0.858824, 0.988235, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PolyPixel15" type="Polygon2D" parent="img/strejs3"]
position = Vector2( 256, 64 )
color = Color( 1, 0.6, 0.521569, 1 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PIxel" type="Polygon2D" parent="img"]
position = Vector2( -384, 80 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PixelTail" type="Node2D" parent="img"]
modulate = Color( 1, 1, 1, 0.470588 )
position = Vector2( -384, 80 )
__meta__ = {
"_edit_group_": true
}

[node name="PIxel2" type="Polygon2D" parent="img/PixelTail"]
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( -32, 0 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PIxel3" type="Polygon2D" parent="img/PixelTail"]
modulate = Color( 1, 1, 1, 0.45098 )
position = Vector2( -64, 0 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[node name="PIxel4" type="Polygon2D" parent="img/PixelTail"]
modulate = Color( 1, 1, 1, 0.360784 )
position = Vector2( -96, 0 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32, 0, 18.4241 )

[node name="PIxel5" type="Polygon2D" parent="img/PixelTail"]
modulate = Color( 1, 1, 1, 0.282353 )
position = Vector2( -128, 0 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32, 0, 18.4241 )

[node name="PIxel6" type="Polygon2D" parent="img/PixelTail"]
modulate = Color( 1, 1, 1, 0.219608 )
position = Vector2( -160, 0 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32, 0, 18.4241 )

[node name="PIxel7" type="Polygon2D" parent="img/PixelTail"]
modulate = Color( 1, 1, 1, 0.152941 )
position = Vector2( -192, 0 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32, 0, 18.4241 )

[node name="PIxel8" type="Polygon2D" parent="img/PixelTail"]
modulate = Color( 1, 1, 1, 0.0705882 )
position = Vector2( -224, 0 )
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32, 0, 18.4241 )

[node name="Title" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 176.0
margin_top = 176.0
margin_right = 1116.0
margin_bottom = 368.0

[node name="Title1" type="TileMap" parent="Title"]
tile_set = SubResource( 135 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( 0, -1610612736, 0, 1, -1610612736, 0, 2, -1610612736, 0, 3, -1610612736, 0, 6, -1610612736, 0, 8, 0, 0, 12, 0, 0, 14, 0, 0, 15, -1610612736, 0, 16, 0, 0, 17, -1610612736, 0, 20, -1610612736, 0, 65536, 0, 0, 65540, -1610612736, 0, 65542, 0, 0, 65545, 0, 0, 65547, 0, 0, 65550, 0, 0, 65556, -1610612736, 0, 131072, 0, 0, 131073, -1610612736, 0, 131074, -1610612736, 0, 131075, -1610612736, 0, 131076, -1610612736, 0, 131078, -1610612736, 0, 131082, 0, 0, 131086, 0, 0, 131087, -1610612736, 0, 131088, -1610612736, 0, 131092, -1610612736, 0, 196608, 0, 0, 196614, -1610612736, 0, 196617, 0, 0, 196619, 0, 0, 196622, 0, 0, 196628, -1610612736, 0, 262144, 0, 0, 262150, -1610612736, 0, 262152, 0, 0, 262156, 0, 0, 262158, 0, 0, 262164, -1610612736, 0, 327680, -1610612736, 0, 327686, -1610612736, 0, 327688, -1610612736, 0, 327692, -1610612736, 0, 327694, -1610612736, 0, 327700, -1610612736, 0, 393216, -1610612736, 0, 393222, -1610612736, 0, 393224, -1610612736, 0, 393228, -1610612736, 0, 393230, 0, 0, 393231, -1610612736, 0, 393232, -1610612736, 0, 393233, 0, 0, 393234, 0, 0, 393236, -1610612736, 0, 393237, -1610612736, 0, 393238, -1610612736, 0, 393239, -1610612736, 0, 393240, -1610612736, 0 )

[node name="Title2" type="TileMap" parent="Title"]
position = Vector2( 368, 64 )
tile_set = SubResource( 135 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( 1, -1610612736, 0, 2, -1610612736, 0, 3, -1610612736, 0, 7, -1610612736, 0, 8, -1610612736, 0, 9, -1610612736, 0, 12, -1610612736, 0, 13, -1610612736, 0, 14, -1610612736, 0, 15, -1610612736, 0, 16, -1610612736, 0, 18, -1610612736, 0, 19, -1610612736, 0, 20, -1610612736, 0, 21, -1610612736, 0, 25, -1610612736, 0, 26, -1610612736, 0, 27, -1610612736, 0, 30, -1610612736, 0, 34, -1610612736, 0, 65536, -1610612736, 0, 65540, -1610612736, 0, 65542, -1610612736, 0, 65550, -1610612736, 0, 65554, -1610612736, 0, 65558, -1610612736, 0, 65560, -1610612736, 0, 65564, -1610612736, 0, 65567, -1610612736, 0, 65569, -1610612736, 0, 131072, -1610612736, 0, 131073, -1610612736, 0, 131074, -1610612736, 0, 131075, -1610612736, 0, 131076, -1610612736, 0, 131078, -1610612736, 0, 131079, -1610612736, 0, 131080, -1610612736, 0, 131081, -1610612736, 0, 131086, -1610612736, 0, 131090, -1610612736, 0, 131091, -1610612736, 0, 131092, -1610612736, 0, 131093, -1610612736, 0, 131096, -1610612736, 0, 131097, -1610612736, 0, 131098, -1610612736, 0, 131099, -1610612736, 0, 131100, -1610612736, 0, 131104, -1610612736, 0, 196608, -1610612736, 0, 196612, -1610612736, 0, 196618, -1610612736, 0, 196622, -1610612736, 0, 196626, -1610612736, 0, 196630, -1610612736, 0, 196632, -1610612736, 0, 196636, -1610612736, 0, 196640, -1610612736, 0, 262144, -1610612736, 0, 262148, -1610612736, 0, 262154, -1610612736, 0, 262158, -1610612736, 0, 262162, -1610612736, 0, 262166, -1610612736, 0, 262168, -1610612736, 0, 262172, -1610612736, 0, 262176, -1610612736, 0, 327680, -1610612736, 0, 327684, -1610612736, 0, 327686, -1610612736, 0, 327690, -1610612736, 0, 327694, -1610612736, 0, 327698, -1610612736, 0, 327702, -1610612736, 0, 327704, -1610612736, 0, 327708, -1610612736, 0, 327712, -1610612736, 0, 393216, 0, 0, 393220, -1610612736, 0, 393223, -1610612736, 0, 393224, -1610612736, 0, 393225, -1610612736, 0, 393230, -1610612736, 0, 393234, -1610612736, 0, 393238, -1610612736, 0, 393240, -1610612736, 0, 393244, -1610612736, 0, 393248, -1610612736, 0 )

[node name="TitlePixels" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0.156863 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 176.0
margin_top = 176.0
margin_right = 1116.0
margin_bottom = 368.0

[node name="Title" type="TileMap" parent="TitlePixels"]
tile_set = SubResource( 135 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -65528, 0, 0, -65517, 0, 0, -65492, 0, 0, 0, -1610612736, 0, 1, -1610612736, 0, 2, -1610612736, 0, 3, -1610612736, 0, 6, 0, 0, 8, 0, 0, 12, 0, 0, 15, -1610612736, 0, 16, 0, 0, 17, -1610612736, 0, 20, 0, 0, 33, 0, 0, 44, 0, 0, 57, 0, 0, 65536, 0, 0, 65540, -1610612736, 0, 65545, 0, 0, 65547, 0, 0, 65550, 0, 0, 65556, -1610612736, 0, 65568, 0, 0, 65581, 0, 0, 131072, 0, 0, 131073, -1610612736, 0, 131074, -1610612736, 0, 131075, -1610612736, 0, 131076, -1610612736, 0, 131078, -1610612736, 0, 131082, 0, 0, 131086, 0, 0, 131087, -1610612736, 0, 131088, -1610612736, 0, 131092, -1610612736, 0, 131104, 0, 0, 131125, 0, 0, 131128, 0, 0, 196608, 0, 0, 196614, -1610612736, 0, 196617, 0, 0, 196619, 0, 0, 196622, 0, 0, 196628, -1610612736, 0, 196653, 0, 0, 196661, 0, 0, 262144, 0, 0, 262150, -1610612736, 0, 262152, 0, 0, 262156, 0, 0, 262158, 0, 0, 262164, -1610612736, 0, 262168, -1610612736, 0, 262169, -1610612736, 0, 262170, -1610612736, 0, 262174, -1610612736, 0, 262175, -1610612736, 0, 262176, -1610612736, 0, 262179, -1610612736, 0, 262180, -1610612736, 0, 262181, -1610612736, 0, 262182, -1610612736, 0, 262183, -1610612736, 0, 262185, -1610612736, 0, 262186, -1610612736, 0, 262187, -1610612736, 0, 262188, -1610612736, 0, 262192, -1610612736, 0, 262193, -1610612736, 0, 262194, -1610612736, 0, 262197, -1610612736, 0, 262201, -1610612736, 0, 327680, -1610612736, 0, 327686, -1610612736, 0, 327688, -1610612736, 0, 327692, -1610612736, 0, 327694, -1610612736, 0, 327700, -1610612736, 0, 327703, -1610612736, 0, 327707, -1610612736, 0, 327709, -1610612736, 0, 327717, -1610612736, 0, 327721, -1610612736, 0, 327725, -1610612736, 0, 327727, -1610612736, 0, 327731, -1610612736, 0, 327734, -1610612736, 0, 327736, -1610612736, 0, 393216, -1610612736, 0, 393222, -1610612736, 0, 393224, 0, 0, 393228, -1610612736, 0, 393231, -1610612736, 0, 393232, -1610612736, 0, 393236, -1610612736, 0, 393237, -1610612736, 0, 393238, -1610612736, 0, 393239, -1610612736, 0, 393240, -1610612736, 0, 393241, -1610612736, 0, 393242, -1610612736, 0, 393243, -1610612736, 0, 393245, -1610612736, 0, 393246, -1610612736, 0, 393247, -1610612736, 0, 393248, -1610612736, 0, 393253, -1610612736, 0, 393257, -1610612736, 0, 393258, -1610612736, 0, 393259, -1610612736, 0, 393260, -1610612736, 0, 393263, -1610612736, 0, 393264, -1610612736, 0, 393265, -1610612736, 0, 393266, -1610612736, 0, 393267, -1610612736, 0, 393271, -1610612736, 0, 458753, 0, 0, 458758, 0, 0, 458764, 0, 0, 458770, 0, 0, 458775, -1610612736, 0, 458779, -1610612736, 0, 458785, -1610612736, 0, 458789, -1610612736, 0, 458793, -1610612736, 0, 458797, -1610612736, 0, 458799, -1610612736, 0, 458803, -1610612736, 0, 458807, -1610612736, 0, 524288, 0, 0, 524294, 0, 0, 524300, 0, 0, 524305, 0, 0, 524311, -1610612736, 0, 524315, -1610612736, 0, 524321, -1610612736, 0, 524325, -1610612736, 0, 524329, -1610612736, 0, 524333, -1610612736, 0, 524335, -1610612736, 0, 524339, -1610612736, 0, 524343, -1610612736, 0, 589824, 0, 0, 589830, 0, 0, 589847, 0, 0, 589851, -1610612736, 0, 589853, -1610612736, 0, 589857, -1610612736, 0, 589861, -1610612736, 0, 589865, -1610612736, 0, 589869, -1610612736, 0, 589871, -1610612736, 0, 589875, -1610612736, 0, 589879, -1610612736, 0, 655360, 0, 0, 655366, 0, 0, 655371, 0, 0, 655387, -1610612736, 0, 655390, -1610612736, 0, 655391, -1610612736, 0, 655392, -1610612736, 0, 655397, 0, 0, 655401, -1610612736, 0, 655405, -1610612736, 0, 655407, -1610612736, 0, 655411, -1610612736, 0, 655415, -1610612736, 0, 720896, 0, 0, 720902, 0, 0, 720908, 0, 0, 720918, 0, 0, 720934, 0, 0, 720947, 0, 0, 720951, 0, 0, 786432, 0, 0, 786438, 0, 0, 786444, 0, 0, 786455, 0, 0, 786470, 0, 0, 786477, 0, 0, 786483, 0, 0, 786487, 0, 0, 851969, 0, 0, 851991, 0, 0, 852005, 0, 0, 852019, 0, 0, 852023, 0, 0, 917505, 0, 0, 917527, 0, 0, 917541, 0, 0, 917559, 0, 0, 983041, 0, 0, 983052, 0, 0, 983090, 0, 0, 983095, 0, 0, 1048577, 0, 0, 1048583, 0, 0, 1048588, 0, 0, 1048627, 0, 0, 1048631, 0, 0, 1114112, 0, 0, 1114119, 0, 0, 1114157, 0, 0, 1114163, 0, 0, 1114166, 0, 0, 1179648, 0, 0, 1179654, 0, 0, 1179702, 0, 0, 1245190, 0, 0, 1245238, 0, 0, 1310726, 0, 0, 1310775, 0, 0, 1376256, 0, 0, 1376307, 0, 0, 1376311, 0, 0, 1441843, 0, 0, 1507334, 0, 0, 1572865, 0, 0, 1638455, 0, 0, 1769472, 0, 0 )

[node name="Menu" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 449.0
margin_top = 510.0
margin_right = 831.0
margin_bottom = 532.0
custom_constants/separation = 32
__meta__ = {
"_edit_group_": true
}

[node name="PlayBtn" type="Button" parent="Menu"]
margin_top = 1.0
margin_right = 56.0
margin_bottom = 22.0
focus_neighbour_right = NodePath("../AboutBtn")
focus_mode = 1
size_flags_horizontal = 2
size_flags_vertical = 8
theme = ExtResource( 4 )
enabled_focus_mode = 1
text = "PLAY"
align = 0

[node name="AboutBtn" type="Button" parent="Menu"]
margin_left = 88.0
margin_top = 1.0
margin_right = 158.0
margin_bottom = 22.0
focus_neighbour_left = NodePath("../PlayBtn")
focus_neighbour_right = NodePath("../SettingsBtn")
focus_mode = 1
size_flags_horizontal = 2
size_flags_vertical = 8
theme = ExtResource( 4 )
disabled = true
enabled_focus_mode = 1
text = "ABOUT"

[node name="SettingsBtn" type="Button" parent="Menu"]
margin_left = 190.0
margin_top = 1.0
margin_right = 298.0
margin_bottom = 22.0
focus_neighbour_left = NodePath("../AboutBtn")
focus_neighbour_right = NodePath("../QuitBtn")
focus_mode = 1
size_flags_horizontal = 2
size_flags_vertical = 8
theme = ExtResource( 4 )
disabled = true
enabled_focus_mode = 1
text = "SETTINGS"

[node name="QuitBtn" type="Button" parent="Menu"]
margin_left = 330.0
margin_top = 1.0
margin_right = 382.0
margin_bottom = 22.0
focus_neighbour_left = NodePath("../SettingsBtn")
focus_mode = 1
size_flags_horizontal = 2
size_flags_vertical = 8
theme = ExtResource( 4 )
disabled = true
enabled_focus_mode = 1
text = "QUIT"
align = 2

[node name="MenuEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/main_out = SubResource( 132 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 816.0
margin_top = 816.0
margin_right = 2016.0
margin_bottom = 1696.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 236.0
margin_bottom = 880.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_right = 236.0
margin_bottom = 21.0
text = "SELECT GAME >"

[node name="Text2" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 236.0
margin_bottom = 382.0
size_flags_horizontal = 3
text = "Pixels, short for \"picture elements,\" are the smallest individual units of a digital image. They are tiny squares or dots that combine to form the visual content on displays such as computer screens, smartphones, cameras, and televisions."
autowrap = true

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 240.0
margin_right = 477.0
margin_bottom = 880.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer2"]
margin_right = 237.0
margin_bottom = 21.0
text = "SELECT GAME >"

[node name="Text2" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 25.0
margin_right = 237.0
margin_bottom = 454.0
size_flags_horizontal = 3
text = "Each pixel represents a specific color and intensity, and together they create the images we see. The resolution of an image refers to the number of pixels it contains. Higher resolutions mean more pixels are packed into the same area, resulting in a sharper and more detailed image."
autowrap = true

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 481.0
margin_right = 718.0
margin_bottom = 880.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer3"]
margin_right = 237.0
margin_bottom = 21.0
text = "SELECT GAME >"

[node name="Text2" type="Label" parent="HBoxContainer/VBoxContainer3"]
margin_top = 25.0
margin_right = 237.0
margin_bottom = 646.0
size_flags_horizontal = 3
text = "Pixels are often represented using a combination of red, green, and blue (RGB) values. In RGB color mode, each pixel has three color channels: red, green, and blue, and each channel can have a value ranging from 0 to 255. By varying the intensity of each channel, different colors can be created. For example, an RGB value of (255, 0, 0) represents pure red, while (0, 255, 0) represents pure green, and (0, 0, 255) represents pure blue."
autowrap = true

[node name="VBoxContainer4" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 722.0
margin_right = 959.0
margin_bottom = 880.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer4"]
margin_right = 237.0
margin_bottom = 21.0
text = "SELECT GAME >"

[node name="Text2" type="Label" parent="HBoxContainer/VBoxContainer4"]
margin_top = 25.0
margin_right = 237.0
margin_bottom = 550.0
size_flags_horizontal = 3
text = "Advancements in technology have led to the development of various pixel types, such as OLED (organic light-emitting diode) and AMOLED (active-matrix organic light-emitting diode) displays, which offer improved color reproduction, contrast ratios, and power efficiency compared to traditional LCD (liquid crystal display) screens."
autowrap = true

[node name="VBoxContainer5" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 963.0
margin_right = 1200.0
margin_bottom = 880.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer5"]
margin_right = 237.0
margin_bottom = 21.0
text = "SELECT GAME >"

[node name="Text2" type="Label" parent="HBoxContainer/VBoxContainer5"]
margin_top = 25.0
margin_right = 237.0
margin_bottom = 382.0
text = "In addition to displays, pixels are also a fundamental concept in digital photography, image editing, and computer graphics. Understanding pixels and their properties is essential when working with digital images and designing visual content."
autowrap = true

[connection signal="focus_exited" from="Menu/PlayBtn" to="." method="_on_PlayBtn_focus_exited"]
[connection signal="pressed" from="Menu/PlayBtn" to="." method="_on_PlayBtn_pressed"]
